# git-railway

./: .gitignore  README.md  pyproject.toml
git_railway/: __init__.py  __main__.py  adt.py  model.py
git_railway/resources/: __init__.py  git_railway.html  popup.js  style.css
git_railway/view/: html.py  svg.py
test/: gen_repo.sh  gen_repo2.sh
